# QMQTT2SQL

./: CMakeLists.txt  README.md
res/: qmqtt2sql.ini  qmqtt2sql.service.in
src/: main.cpp  mqtt2sqlconfig.cpp  mqtt2sqlconfig.h  mqttsubscriber.cpp  mqttsubscriber.h  qtjsonpath.h
